--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-color: #222;
+    background-color: #0e3f69;
 }
 
 .card{
@@ -15,7 +15,7 @@ body{
     width: 470px;
     background: linear-gradient(135deg, #00feba, #5b548a);
     color:#fff;
-    margin: 100px auto 0;
+    margin: 50px auto 50px;
     border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
