--- a/style.css
+++ b/style.css
@@ -7,15 +7,15 @@
 }
 
 body{
-    background-color: #0e3f69;
+    background-color: #5b548a;
 }
 
 .card{
 
     width: 470px;
-    background: linear-gradient(135deg, #00feba, #5b548a);
+    background: linear-gradient(135deg, #00feba, #433b75);
     color:#fff;
-    margin: 50px auto 50px;
+    margin: 20px auto -20px auto;
     border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
@@ -228,4 +228,26 @@ body{
         font-size: 16px;
         margin-top: -3px;
     }
+}
+
+
+.card-suntimings{
+    width: 80%;
+    background: linear-gradient(135deg, #48f6c7, #6e6797);
+    color:#fff;
+    margin: 50px auto 50px;
+    border-radius: 20px;
+    padding: 40px 35px;
+    text-align: center;
+}
+
+.card-suntimings img{
+    width: 100%;
+}
+
+
+.sun-details{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
